<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/light_grey"
    android:orientation="vertical">

     <RelativeLayout
        android:id="@+id/login_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
         android:background="@drawable/bg_retangle"
        android:orientation="horizontal">
        <ImageButton 
           android:id="@+id/iv_login_back"
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/margin"
           android:layout_alignParentLeft="true"
           android:layout_centerInParent="true"
           android:background="@drawable/bg_back_selector"/>
        <TextView
             android:id="@+id/text_my_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="@color/white"
             android:textSize="@dimen/text_big"
             android:text="@string/login" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/white"       
        android:divider="@drawable/bg_divider"
        android:showDividers="middle|end" 
        android:padding="@dimen/padding" 
        android:orientation="horizontal">

        <ImageView 
           android:id="@+id/iv_login_name"
           android:layout_height="@dimen/icon_height"
           android:layout_width="@dimen/icon_width"
           android:layout_gravity="center"
           android:background="@drawable/icon_main_category_selected"/>
        
        <EditText 
           android:id="@+id/et_login_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/margin"
           android:background="@drawable/bg_input_normal_no_stroke"
           android:hint="@string/name_hint"/>
    </LinearLayout>
    <View  
         android:layout_width="match_parent"
         android:layout_height="@dimen/line_height"
         android:layout_marginLeft="@dimen/margin"
         android:layout_marginRight="@dimen/margin"
         android:background="@drawable/bg_divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:padding="@dimen/padding"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView 
           android:id="@+id/iv_login_psd"
           android:layout_height="@dimen/icon_height"
           android:layout_width="@dimen/icon_width"
           android:layout_gravity="center"
           android:background="@drawable/pic_iconlock"/>
        
        <EditText 
           android:id="@+id/et_login_psd"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/margin"
           android:background="@drawable/bg_input_normal_no_stroke"
           android:hint="@string/psd_hint"/>
    </LinearLayout>
    <Button 
        android:id="@+id/bt_login"
        android:layout_height="@dimen/button_height"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:background="@drawable/bg_btn_login_selector"
        android:text="@string/login"
        android:textColor="@color/white"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:orientation="horizontal">       
        <TextView 
           android:id="@+id/tv_fast_register"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left|center_horizontal"
           android:textColor="@color/skyblue"
           android:textSize="@dimen/text_middle"
           android:text="@string/fast_register"/>
        <ImageView
            android:id="@+id/iv_fast_register"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/tv_fast_register"
            android:background="@drawable/open_arrow" />
        <TextView
            android:id="@+id/tv_forget_psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_psd" 
            android:textColor="@color/skyblue"
            android:textSize="@dimen/text_middle" />       
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login_other"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:padding="@dimen/padding"
        android:orientation="vertical">        
        <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/login_way"/>

        <View  
         android:layout_width="match_parent"
         android:layout_height="@dimen/line_height"
         android:layout_marginTop="@dimen/margin_login_way"
         android:layout_marginLeft="@dimen/margin"
         android:layout_marginRight="@dimen/margin"
         android:background="@drawable/bg_divider"/>
        
       <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:orientation="horizontal"> 
        <ImageView 
            android:id="@+id/iv_login_wechat"
            android:layout_width="@dimen/icon_middle_height"
            android:layout_height="@dimen/icon_middle_width"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_login_way"
            android:src="@drawable/login_wechat" /> 
        <ImageView
            android:id="@+id/iv_login_qq"
            android:layout_width="@dimen/icon_middle_height"
            android:layout_height="@dimen/icon_middle_width"
            android:layout_centerInParent="true"
            android:src="@drawable/login_qq" />  
        <ImageView
            android:id="@+id/iv_login_weibo"
            android:layout_width="@dimen/icon_middle_height"
            android:layout_height="@dimen/icon_middle_width"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_login_way"
            android:src="@drawable/login_weibo" /> 
        </RelativeLayout>

       <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal"> 
         <TextView
                android:id="@+id/tv_login_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/login_wechat" />               
         <TextView
                android:id="@+id/tv_login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_qq" />                         
         <TextView
                android:id="@+id/tv_login_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login_weibo" /> 
        </RelativeLayout>                   
        
    </LinearLayout>
    
</LinearLayout>