<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginBottom="16dp"
        android:text="@string/guide1"
        android:id="@+id/textView"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_above="@+id/textView2"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/guide2"
        android:id="@+id/textView2"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/guide3"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/textView3"
        android:textColor="@color/white"/>
     <LinearLayout
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:gravity="center"
        android:orientation="horizontal" >
        <View 
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="2dp"
            android:background="@drawable/bg_view_focused"/>
        <View 
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="2dp"
            android:background="@drawable/bg_view_blured"/>
     </LinearLayout>


</RelativeLayout>