<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
   >

    <RelativeLayout
        android:id="@+id/rl_country_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height" 
        android:background="@drawable/bg_retangle"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <ImageButton 
           android:id="@+id/iv_country_back"
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/margin"
           android:layout_alignParentLeft="true"
           android:layout_centerInParent="true"
           android:background="@drawable/bg_back_selector"/>
        <TextView
             android:id="@+id/tv_country_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="@color/white"
             android:textSize="@dimen/text_big"
             android:text="@string/country_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginLeft="@dimen/left_right_margin" 
        android:layout_marginRight="@dimen/left_right_margin" 
        android:layout_marginTop="@dimen/top_bottom_margin"
        android:layout_marginBottom="@dimen/margin"
        android:background="@color/white">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/iv_country"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="120dp"
            android:src="@drawable/ic_launcher"
            android:layout_margin="@dimen/top_bottom_margin"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_visa_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:text="Large Text"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/tv_visa_period"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:text="TextView"/>

            <TextView
                android:id="@+id/tv_visa_price"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="4dp"
                android:text="Medium Text"
                android:textColor="@color/black" />

        </LinearLayout>

        </LinearLayout>

       
    </LinearLayout>


    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visa_apply"
        android:textSize="@dimen/text_big"
        android:layout_marginLeft="@dimen/left_right_margin"
        android:layout_marginRight="@dimen/left_right_margin"
        android:background="@drawable/bg_btn_login_selector"
        android:layout_marginBottom="@dimen/margin"
        />
        <TextView
            android:id="@+id/tv_visa_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/gray"
            android:text="Text"
            android:textSize="@dimen/text_small"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/left_right_margin"
            android:layout_marginRight="@dimen/left_right_margin"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.5"
            android:padding="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginLeft="@dimen/left_right_margin" 
        android:layout_marginRight="@dimen/left_right_margin" 
        android:layout_marginBottom="@dimen/margin"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/visa_tip"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/bg_divider"/>
        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/gray"
            android:text="TextView" />

    </LinearLayout>

    <com.lium.evisa.ui.ScrollListView
        android:id="@+id/lv_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/left_right_margin" 
        android:layout_marginRight="@dimen/left_right_margin"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:divider="@null"
        android:background="@color/white"
        android:layout_marginBottom="16dp">
    </com.lium.evisa.ui.ScrollListView>

    </LinearLayout>
</ScrollView>
</LinearLayout>
